# hosting-server

./: .env.example  .gitignore  AGENTS.md  README.md  deploy.sh  docker-compose.yml  go.md  package.json  pyproject.toml
apps/api/: Dockerfile  docker-compose.yml  main.py  prestart.py  prestart.sh  requirements.txt  start.sh
apps/csharp-api/: Dockerfile  Program.cs  docker-compose.yml
apps/csharp_api/: Dockerfile  Program.cs  docker-compose.yml
apps/express/: Dockerfile  docker-compose.yml  index.js  package.json
apps/express_api/: docker-compose.yml  index.js  package.json
apps/go-api/: Dockerfile  docker-compose.yml  main.go
apps/nest/: Dockerfile  docker-compose.yml  main.ts  package.json  tsconfig.json
apps/nest_api/: Dockerfile  docker-compose.yml  package.json  tsconfig.json
apps/nest_api/src/: main.ts
apps/platform-ui/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package.json  vite.config.ts
apps/platform-ui/src/: App.tsx  ErrorBoundary.tsx  main.tsx
apps/web/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
cli_tools/custom_cli_tool/: Cargo.toml  README.md
cli_tools/custom_cli_tool/src/: main.rs
compose/app-registry/: api.yaml  app1.yaml  csharp.yaml  csharp_api.yaml  express.yaml  express_api.yaml  go-api.yaml  nest.yaml  nest_api.yaml  web.yaml
docs/: 00-table-of-contents.md  01-monorepo-structure.md  01-overview-goals.md  02-directory-setup.md  02-dockerizing-web.md  03-dockerizing-api.md  04-docker-compose-orchestration.md  05-nginx-reverse-proxy.md  06-env-vars-secrets.md  07-persistent-volumes.md  08-networking-service-discovery.md  09-operations.md  10-local-domains-ssl.md  11-monitoring-logs.md  12-scaling-migration.md  13-log-watcher.md  14-backup-scheduler.md  15-webhook-handler.md  16-healthcheck-dashboard.md  17-static-file-proxy.md  18-metrics-exporter.md  19-custom-cli-tool.md  20-multi-language-backends.md  21-data-capture.md  22-mongo-backup.md  23-websocket-broadcast.md  25-web-ui.md  devset.sh  hosting.md  hostingplan.md  toc.md
monitoring/: promtail-config.yml
nginx/: nginx.conf  nginx.conf.template
nginx/certs/: README.md
public/: index.html
scripts/: deploy.sh  generate-nginx.py  launch_apps.py
services/backup_scheduler/: Cargo.toml  Dockerfile  config.toml
services/backup_scheduler/src/: main.rs
services/data_capture/: main.py
services/deployment_api/: main.py
services/go_job_queue/: Dockerfile  README.md  go.mod  main.go
services/healthcheck_dashboard/: Cargo.toml  Dockerfile  config.toml
services/healthcheck_dashboard/src/: main.rs
services/log_watcher/: Cargo.toml  Dockerfile  config.toml
services/log_watcher/src/: main.rs
services/metrics_exporter/: Cargo.toml  Dockerfile  config.toml
services/metrics_exporter/src/: main.rs
services/mongo_backup/: Cargo.toml  Dockerfile
services/mongo_backup/src/: main.rs
services/static_file_proxy/: Cargo.toml  Dockerfile  config.toml
services/static_file_proxy/src/: main.rs
services/webhook_handler/: Cargo.toml  Dockerfile  config.toml
services/webhook_handler/src/: main.rs
services/ws_broadcast/: Cargo.toml  Dockerfile
services/ws_broadcast/src/: main.rs
