[package]
name = "custom_cli_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
