[package]
name = "backup_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
tokio-cron-scheduler = "0.14"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "signal"] }
flate2 = "1"
tar = "0.4"

