[package]
name = "metrics_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
