[package]
name = "static_file_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.5", features = ["fs"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs"] }
anyhow = "1"
